Adding more form changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
 	<div><a href="http://mkingwebdev.wordpress.com" target="_blank">My Blog</a></div>
 	<br />
 	<div><a href="http://www.kinglythings.com/reservation" target="_blank">Reservation Site</a></div>
+	<br />
+	<div><a href="https://github.com/KinglyThings/CS4550-Site" target="_blank">Source Code (on GitHub)</a></div>
 	<div><img alt="Mugshot" src="/static/images/mugshot.jpg" /></div>
 	<p> Non-terrible website coming soon </p>
+
+	<p> CREDITS LIST: (SOON TO BE ITS OWN PAGE) </p>
+	<ul>
+		<li>jQuery</li>
+	</ul>
 </body>
 </html>
