Adding sql handling for site

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	<p> CREDITS LIST: (SOON TO BE ITS OWN PAGE) </p>
 	<ul>
 		<li>jQuery</li>
+		<li>jQuery DatePicker</li>
+		<li>DP_DateExtensions</li>
 	</ul>
 </body>
 </html>
