Adding slideshow js logic

--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
 		<li>jQuery DatePicker</li>
 		<li>DP_DateExtensions</li>
 	</ul>
+
+	<p> IMAGE CREDITS LIST: </p>
+	<ul>
+		<li> http://utsa.edu/today/2010/07/ciasaward.html </li>
+		<li>http://wallpapers.androlib.com/wallicons/wallpaper.big-pDi.cs.png</li>
+		<li> Haaretz (http://www.haaretz.com/polopoly_fs/1.433408.1338391139!/image/2879575882.jpg_gen/derivatives/landscape_640/2879575882.jpg)</li>
+	</ul>
 </body>
 </html>
